eclipseWorkspace/AK SFDC/src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Akascia_Territory__c</fullName>
        <label>Akascia Territory</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Category_List__c</fullName>
        <label>CB: Category List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Country_Code__c</fullName>
        <label>CB: Country Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Founded_Year__c</fullName>
        <label>CB: Founded Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Funding_Total_USD__c</fullName>
        <label>CB: Funding Total USD</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CB_Last_Funding_At__c</fullName>
        <label>CB: Latest Funding Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CB_Market__c</fullName>
        <label>CB: Market</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Permalink__c</fullName>
        <externalId>true</externalId>
        <label>CB: Permalink</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CB_Region__c</fullName>
        <label>CB: Region</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_State_Code__c</fullName>
        <label>CB: State Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Age__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check Age</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Check_Funding__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check Funding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Check_Technology__c</fullName>
        <formula>IF(CONTAINS(CB_Category_List__c,&quot;Cooking&quot;),FALSE,
IF(CONTAINS(CB_Category_List__c,&quot;Health Care&quot;),FALSE,
IF(CONTAINS(CB_Category_List__c,&quot;Food&quot;),FALSE,
IF(CONTAINS(CB_Category_List__c,&quot;Material Science&quot;),FALSE,
IF(CONTAINS(CB_Category_List__c,&quot;Corporate Training&quot;),FALSE,
IF(CONTAINS(CB_Category_List__c,&quot;Biotech&quot;),FALSE,
IF(CONTAINS(CB_Category_List__c,&quot;|Utilities|&quot;),FALSE,
IF(CONTAINS(CB_Category_List__c,&quot;Shoes&quot;),FALSE,
IF(CONTAINS(CB_Category_List__c,&quot;Lifestyle&quot;),FALSE,
IF(CONTAINS(CB_Category_List__c,&quot;Fashion&quot;),FALSE,
IF(CONTAINS(CB_Category_List__c,&quot;Manufacturing&quot;),FALSE,
IF(CONTAINS(CB_Category_List__c,&quot;Auctions&quot;),FALSE,
IF(CONTAINS(CB_Category_List__c,&quot;Clean Technology&quot;),FALSE,
TRUE)))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Check Technology</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Code_Check__c</fullName>
        <formula>TEXT(CountryCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code Check</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Crunchbase_URL__c</fullName>
        <formula>HYPERLINK(&quot;http://www.crunchbase.com/&quot; &amp; CB_Permalink__c , &quot;http://www.crunchbase.com/&quot; &amp; CB_Permalink__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Crunchbase URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Override_DupeCatcher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Override DupeCatcher</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>APAC_Leads</fullName>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>CB_Founded_Year__c</columns>
        <columns>CB_Funding_Total_USD__c</columns>
        <columns>CB_Category_List__c</columns>
        <columns>CB_Market__c</columns>
        <columns>Crunchbase_URL__c</columns>
        <columns>LEAD.URL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Akascia_Territory__c</field>
            <operation>equals</operation>
            <value>APAC</value>
        </filters>
        <filters>
            <field>Check_Technology__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>APAC Leads</label>
    </listViews>
    <listViews>
        <fullName>AllLeads</fullName>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>CB_Founded_Year__c</columns>
        <columns>CB_Category_List__c</columns>
        <columns>CB_Market__c</columns>
        <columns>LEAD.URL</columns>
        <columns>Check_Technology__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Leads</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Leads</fullName>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>CB_Founded_Year__c</columns>
        <columns>CB_Funding_Total_USD__c</columns>
        <columns>CB_Category_List__c</columns>
        <columns>CB_Market__c</columns>
        <columns>Crunchbase_URL__c</columns>
        <columns>LEAD.URL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Check_Technology__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>Crunchbase_Leads_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Crunchbase Leads</label>
        <queue>Crunchbase_Leads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EMEA_Leads</fullName>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>CB_Founded_Year__c</columns>
        <columns>CB_Funding_Total_USD__c</columns>
        <columns>CB_Category_List__c</columns>
        <columns>CB_Market__c</columns>
        <columns>Crunchbase_URL__c</columns>
        <columns>LEAD.URL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Akascia_Territory__c</field>
            <operation>equals</operation>
            <value>EMEA</value>
        </filters>
        <filters>
            <field>Check_Technology__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>EMEA Leads</label>
    </listViews>
    <listViews>
        <fullName>Non_Target_All</fullName>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>CB_Founded_Year__c</columns>
        <columns>CB_Funding_Total_USD__c</columns>
        <columns>CB_Category_List__c</columns>
        <columns>CB_Market__c</columns>
        <columns>Crunchbase_URL__c</columns>
        <columns>LEAD.URL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Non-Target</value>
        </filters>
        <label>Non Target - All</label>
    </listViews>
    <listViews>
        <fullName>Non_Target_Low_Funding</fullName>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>CB_Founded_Year__c</columns>
        <columns>CB_Funding_Total_USD__c</columns>
        <columns>CB_Category_List__c</columns>
        <columns>CB_Market__c</columns>
        <columns>Crunchbase_URL__c</columns>
        <columns>LEAD.URL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Check_Age__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Check_Funding__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Check_Technology__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Akascia_Territory__c</field>
            <operation>notEqual</operation>
            <value>Outside</value>
        </filters>
        <label>Non Target - Low Funding</label>
    </listViews>
    <listViews>
        <fullName>Non_Target_Outside_Region</fullName>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>CB_Founded_Year__c</columns>
        <columns>CB_Funding_Total_USD__c</columns>
        <columns>CB_Category_List__c</columns>
        <columns>CB_Market__c</columns>
        <columns>Crunchbase_URL__c</columns>
        <columns>LEAD.URL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Check_Age__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Check_Funding__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Check_Technology__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Akascia_Territory__c</field>
            <operation>equals</operation>
            <value>Outside</value>
        </filters>
        <label>Non Target - Outside Region</label>
    </listViews>
    <listViews>
        <fullName>Non_Target_Technology</fullName>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>CB_Founded_Year__c</columns>
        <columns>CB_Funding_Total_USD__c</columns>
        <columns>CB_Category_List__c</columns>
        <columns>CB_Market__c</columns>
        <columns>Crunchbase_URL__c</columns>
        <columns>LEAD.URL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Check_Age__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Check_Funding__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Check_Technology__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Akascia_Territory__c</field>
            <operation>notEqual</operation>
            <value>Outside</value>
        </filters>
        <label>Non Target - Technology</label>
    </listViews>
    <listViews>
        <fullName>Non_Target_Too_Old</fullName>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>CB_Founded_Year__c</columns>
        <columns>CB_Funding_Total_USD__c</columns>
        <columns>CB_Category_List__c</columns>
        <columns>CB_Market__c</columns>
        <columns>Crunchbase_URL__c</columns>
        <columns>LEAD.URL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Check_Age__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Check_Funding__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Check_Technology__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Akascia_Territory__c</field>
            <operation>notEqual</operation>
            <value>Outside</value>
        </filters>
        <label>Non Target - Too Old</label>
    </listViews>
    <listViews>
        <fullName>US_Leads_A_M_Chris</fullName>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>CB_Founded_Year__c</columns>
        <columns>CB_Funding_Total_USD__c</columns>
        <columns>CB_Category_List__c</columns>
        <columns>CB_Market__c</columns>
        <columns>Crunchbase_URL__c</columns>
        <columns>LEAD.URL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Akascia_Territory__c</field>
            <operation>equals</operation>
            <value>Americas</value>
        </filters>
        <filters>
            <field>Check_Technology__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>LEAD.COMPANY</field>
            <operation>startsWith</operation>
            <value>a,b,c,d,e,f,g,h,i,j,k,l,m,1,2,3,4,5</value>
        </filters>
        <label>US Leads (A-M, Chris)</label>
    </listViews>
    <listViews>
        <fullName>US_Leads_N_Z_Steve</fullName>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>CB_Founded_Year__c</columns>
        <columns>CB_Funding_Total_USD__c</columns>
        <columns>CB_Category_List__c</columns>
        <columns>CB_Market__c</columns>
        <columns>Crunchbase_URL__c</columns>
        <columns>LEAD.URL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Akascia_Territory__c</field>
            <operation>equals</operation>
            <value>Americas</value>
        </filters>
        <filters>
            <field>Check_Technology__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>LEAD.COMPANY</field>
            <operation>startsWith</operation>
            <value>n,o,p,q,r,s,t,u,v,w,x,y,z,6,7,8,9,0</value>
        </filters>
        <label>US Leads (N-Z, Steve)</label>
    </listViews>
    <listViews>
        <fullName>Unknown_Territory_Leads</fullName>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>CB_Founded_Year__c</columns>
        <columns>CB_Funding_Total_USD__c</columns>
        <columns>CB_Category_List__c</columns>
        <columns>CB_Market__c</columns>
        <columns>Crunchbase_URL__c</columns>
        <columns>LEAD.URL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Akascia_Territory__c</field>
            <operation>notEqual</operation>
            <value>Americas,EMEA,APAC</value>
        </filters>
        <filters>
            <field>Check_Technology__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Unknown Territory Leads</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>